ui dialogue fix on smaller screens

--- a/source/styles/ui-dialog.scss
+++ b/source/styles/ui-dialog.scss
@@ -1,10 +1,18 @@
 .ui-dialog {
   background: var(--cms-background-colour--dynamic) !important;
   border-color: var(--cms-border-colour) !important;
+  max-height: 80vh;
+  overflow: auto;
 }
 
 .ui-icon-closethick {
   transform: scale(.75);
+}
+
+.ui-dialog-titlebar-close {
+  top: 5px!important;
+  right: 5px!important;
+  transform: none!important;
 }
 
 body {
